Edited wiki page UsageOfBBS through web user interface.

--- a/wiki/UsageOfBBS.wiki
+++ b/wiki/UsageOfBBS.wiki
@@ -92,7 +92,7 @@ Use the program *BBS*
 =Contact=
 Any questions, problems, bugs are welcome and should be dumped to
 
-Qin Ma <maqin2001@gmail.com>
+Qin Ma <maqin@uga.edu>
 
 Chuan Zhou <zhouchuan121@gmail.com>
 
