Edited wiki page UsageOfBBC through web user interface.

--- a/wiki/UsageOfBBC.wiki
+++ b/wiki/UsageOfBBC.wiki
@@ -38,10 +38,11 @@ The three result files will be in folder '*SequenceFile.BBC*'
   # Result about motif comparison is in *SequenceFile.BBC/SequenceFile.motif_alignment.similarity*;
   # Result about motif cluster and annotation is in *SequenceFile.BBC/SequenceFile.motif_alignment.BBC*;
 
-If want to change thresholds T1 and T2 (Defaults: 0.88 and 0.95) in clustering, please add the numbers you prefer to the end of the command. e.g.
+If want to change thresholds T1 and T2 (Defaults: 0.88 and 0.95) in clustering, please add the numbers you prefer to the end of the command. e.g.(Set T1=0.89; T2=0.95)
 
-  *$ perl BBC.pl SequenceFile motif_alignment [0/1/2/3] 0.89 0.96
   *$ perl BBC.pl SequenceFile 0 0 0.89 0.96
+  *$ perl BBC.pl SequenceFile motif_alignment [0/1/2/3] 0.89 0.96
+  
 
 
 =Format of outputs=
